Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34983

QML Filedialog doesn't work properly on BB10 (Z10)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.3.0 Beta1
    • 5.2.0 Beta1
    • Blackberry Z10, Software: 10.2.1.176, Qt5.2.0 Beta1(built with NDK 10.1)
    • 7591abbe0402d7fcb6305728c1456c1e148d1c40

      Example Code:

      import QtQuick 2.0
      import QtQuick.Dialogs 1.0

      Rectangle {
      width: 200
      height: 200
      FileDialog {
      id: fileDialog
      title: "MyTitle"
      selectFolder: false
      selectMultiple: false
      onAccepted:

      { var urls = fileDialog.fileUrls console.log(urls) }

      }
      MouseArea

      { anchors.fill: parent onClicked: fileDialog.open() }

      }

      First Bug: Filedialog only opens once on my Z10. So if I close the dialog,
      it doesn't open again
      Second Bug: Filedialog doesn't return anything -> console.log is empty
      Third Bug: If I set selectFolder to true, I still can only choose files
      Forth Bug: If I set selectMultiple to true, I still can only choose 1 file

      greets

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            bweimer Bernd Weimer
            eugen.gross Eugen Gross
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes